--- a/public/style.css
+++ b/public/style.css
@@ -87,8 +87,8 @@ header{
 }
 .window{
 	margin:5% auto;
-	width: 400px;
-	height: 400px;
+	width: 500px;
+	height: 500px;
 }
 .pup{
 	width: 100%;
@@ -97,7 +97,39 @@ header{
 	left:0px;
 	top:0px;
 	background-color: black;
-	opacity: .8;
+	opacity: .9;
 	display: none;
 	box-sizing: border-box;
+}
+.close{
+	position: absolute;
+	left:70%;
+	top:5%;
+	width: 30px;
+	height: 30px;
+	text-align: center;
+}
+.close>img{
+	width: 100%;
+	height: 100%;
+}
+.p{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	left:0px;
+	top:0px;
+	background-color: black;
+	opacity: .9;
+	display: none;
+	box-sizing: border-box;
+}
+.p img{
+	width: 80%;
+}
+.verj{
+	clear: left;
+}
+.n img{
+	width: 200px;
 }
