--- a/public/style.css
+++ b/public/style.css
@@ -1,222 +1,125 @@
-.bodyIndex{
-	background-color: grey;
+body{
+	margin: 0px;
 }
-.cont{
-	overflow:hidden;
-	width:500px;
-	height: 250px;
-	position:absolute;
-	left: 50%;
-	top:50%;
-	transform:translate(-50%,-50%);
-	opacity: 1;
-	transition: opacity 1s;
-	box-shadow: 5px 10px 8px;
-}
-img{
-	position: absolute;
-	width: 500px;
-	height: 250px;
-	left: 50%;
-	top:50%;
-	transform: translate(-50%,-50%);
-}
-.cont:before {
-	content: '';
-	width:250px;
-	height: 250px;
-	background-color:lightblue;
-	opacity: 0;
-	position: absolute;
-	left: -65%;
-	top: 0px;
-	box-sizing: border-box;
-	transform:rotate(45deg) translate(0,0);
-	transition: 1s;
-}
-.cont:after{
-	content: '';
-	width:250px;
-	height: 250px;
-	background-color:lightblue;
-	opacity: 0;
-	position: absolute;
-	right: -65%;
-	top: 0px;
-	box-sizing: border-box;
-	transform:rotate(45deg) translate(0,0);
-	transition: 1s;
-}
-.cont:hover::before{
-	opacity: 0.6;
-	left:10%;
-	transition: 1s;
-}
-.cont:hover::after{
-	opacity: 0.6;
-	right:10%;
-	transition: 1s;
-}
-.btn{
-	position: absolute;
-	left: 50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	opacity: 0;
-	text-decoration: none;
+header{
 	border:solid;
-	color:blue;
-	padding: 20px;
-}
-.bodyGallery{
-	margin:0px;
+	box-sizing: border-box;
+	height: 45px;
+	width: 100%;
 	background-color: black;
+	opacity: 0.8;
 }
-.container{
-	height:600px;
-	width:1000px;
-	position: absolute;
-	left:50%;
-	top: 50%;
-	transform: translate(-50%,-50%);
-	border:solid;
-	overflow: hidden;
+.pc a{
+	color:white;
+	text-decoration: none;
+	vertical-align: sub;
+	transition: color 0.25s;
+	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+	font-size:14px;
 }
-#slider{
-	width: 3000px;
+.mb .m:hover{
+	background-image: url('./image/searchGray.png');
+}
+.mb .logo:hover{
+	background-image: url('./image/logoGray.png');
+}
+.mb .bag:hover{
+	background-image: url('./image/shopGray.png');
+}
+.pc .search:hover{
+	background-image: url('./image/searchGray.png');
+}
+.pc .logo:hover{
+	background-image: url('./image/logoGray.png');
+}
+.pc .bag:hover{
+	background-image: url('./image/shopGray.png');
+}
+.pc a:hover{
+	color:grey;
+}
+header nav div{
+	text-align: center;
+}
+.pc{
+	border:solid black;
+	box-sizing: border-box;
+	display: block;
 	height: 100%;
-	transform: translate(0,0);
-	transition: 1s;
+	width: 80%;
+	margin: auto;
 }
-#slider>div{
-	margin:0px;
+.pc .menu ,.mb .menu{
+	border: solid black;
+	box-sizing: border-box;
 	float:left;
-	box-sizing: border-box;
 	height: 100%;
-	width: 1000px;
 }
-#div1>div,#div2>div,#div3>div{
-	height: 200px;
-	width: 100%;
-}
-#div1>div>div,#div2>div>div,#div3>div>div{
-	box-sizing: border-box;
-	float: left;
-	width: 200px;
-	height: 200px;
-	background-position: center;
-	background-size: cover;
-	filter: blur(0px);
-	transition: 1s;
-}
-#div1>div>div:after{
-	content: "OPEN";
-	position:absolute;
-	top: 50%;
-	left:50%;
-	transform: translate(-50%,-50%);
-	opacity: 0;
-	color:white;
-	transition: 1s;
-}
-#div1>div>div:hover::after{
-	opacity: 1;
-	transition: 1s;
-}
-#div2>div>div:after{
-	content: "OPEN";
-	position:absolute;
-	top: 50%;
-	left:50%;
-	transform: translate(-50%,-50%);
-	opacity: 0;
-	color:white;
-	transition: 1s;
-}
-#div2>div>div:hover::after{
-	opacity: 1;
-	transition: 1s;
-}
-#div3>div>div:after{
-	content: "OPEN";
-	position:absolute;
-	top: 50%;
-	left:50%;
-	transform: translate(-50%,-50%);
-	opacity: 0;
-	color:white;
-	transition: 1s;
-}
-#div3>div>div:hover::after{
-	opacity: 1;
-	transition: 1s;
-}
-#div1>div>div:hover,#div2>div>div:hover,#div3>div>div:hover{
-	filter: blur(2px);
-	transition: 1s;
-}
-#pup{
-	height: 100%;
-	width: 100%;
-	position: absolute;
-	left: 0px;
-	top:0px;
-	border:solid;
+.mb{
+	border:solid black;
 	box-sizing: border-box;
 	display: none;
+	height: 100%;
+	width: 100%;
+	margin: auto;
 }
-.image{
-	box-sizing: border-box;
-	position: absolute;
-	left:50%;
-	top:50%;
-	transform: translate(-50%,-50%); 
-	width: 750px;
-	height: 450px;
-	animation-name: example;
-  	animation-duration: 1s;
-  	background-size: cover;
-  	background-position: center;
+
+/*------------------------------------------------------*/
+
+.logo,.search,.bag,.m{
+	background-size: auto 70%;
+	background-repeat: no-repeat;
 }
-#close{
-	width: 15px;
-	height: 15px;
-	position: absolute;
-	top:10%;
-	left:80%;
-	animation-name: animClose;
-  	animation-duration: 2s;
-  	background-image: url('image/close.png');
-  	background-size: cover;
-  	background-position: center; 
+.pc .menu{
+	width:10%;
 }
-@keyframes example {
-  from {width:0px;height: 0px;}
-  to {width:750px;height: 450px;}
-}
-@keyframes animClose {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-#left{
-	position: absolute;
-	left: 5%;
-	top:50%;
-	transform: translate(-50%,-50%);
-	width: 60px;
-	height: 60px;
-	background-image: url('image/left.png');
+.pc .logo{
+	background-image: url('./image/logo.svg');
+	background-size: auto 70%;
 	background-position: center;
-	background-size: cover;
+	transition: background-image 0.25s;
 }
-#right{
-	position: absolute;
-	left: 95%;
-	top:50%;
-	transform: translate(-50%,-50%);
-	width: 60px;
-	height: 60px;
-	background-image: url('image/right.png');
+.pc .search{
+	background-image: url('./image/search.png');
+	background-size: auto 60%;
 	background-position: center;
-	background-size: cover;
+	transition: background-image 0.25s;
+}
+.pc .bag{
+	background-image: url('./image/shop.svg');
+	background-size: auto 170%;
+	background-position: center;
+	transition: background-image 0.25s;
+}
+
+/*------------------------------------------------------*/
+
+.m{
+	background-image: url('./image/search.png');
+	background-size: auto 60%;
+	background-position: left;
+	transition: background-image 0.25s
+}
+.mb .logo{
+	background-position: center;
+	background-image: url('./image/logo.svg');
+	background-size: auto 70%;
+	transition: background-image 0.25s;
+}
+.mb .bag{
+	background-position: right;
+	background-image: url('./image/shop.svg');
+	background-size: auto 170%;
+	transition: background-image 0.25s;	
+}
+
+/*------------------------------------------------------*/
+
+@media only screen and (max-width: 700px){
+	.pc{
+		display: none;
+	}
+	.mb{
+		display: block;
+	}
 }
