--- a/public/style.css
+++ b/public/style.css
@@ -8,6 +8,9 @@ header{
 	width: 100%;
 	background-color: black;
 	opacity: 0.8;
+	position: fixed;
+	top:0px;
+	left:0px;
 }
 .pc a{
 	color:white;
@@ -121,5 +124,118 @@ header nav div{
 	}
 	.mb{
 		display: block;
+	}
+}
+
+/*----------------------content----------------------*/
+.content{
+	margin: 45px;
+}
+.xr,.X,.xs,.w{
+	box-sizing: border-box;
+	font-family: "SF Pro Text","Myriad Set Pro","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
+	margin:100px auto;
+	width: 95%;
+}
+.xr>h2,.xr>h3,.X>h2,.X>h3,.xs>h2,.xs>h3,.w>h2,.w>h3{
+	text-align: center;
+}
+.xr>h2,.X>h2,.xs>h2,.w>h2{
+	font-size:32px;
+	margin:0px;
+}
+.xr>h3,.X>h3,.xs>h3,.w>h3{
+	margin: 10px auto;
+	font-size:24px;
+	font-weight: lighter;
+}
+.X>h3{
+	width: 50%;
+}
+.xr>h3{
+	width: 45%;
+}
+.xs>h3{
+	width: 60%;
+}
+.w>h3{
+	width: 45%;
+}
+.d1{
+	box-sizing: border-box;
+	margin: auto;
+	width: 50%;
+}
+.xr>div>div>a,.X>div>div>a,.xs>div>div>a,.w>div>div>a{
+	color:#0070c9;
+	text-decoration: none;
+	font-size:21px;
+}
+.b,.l{
+	box-sizing: border-box;
+	width: 50%;
+	float: left;
+	padding: 5px;
+}
+.b{
+	text-align: right;
+}
+.l{
+	text-align: left;
+}
+.b:after,.l:after{
+	content: '>';
+	box-sizing: border-box;
+	color:#0070c9;
+}
+.b>a:hover,.l>a:hover{
+	text-decoration: underline;
+}
+.v{
+	clear: left;
+}
+.X .img,.xs .img,.w .img{
+	box-sizing: border-box;
+	width: 100%;
+	height: 337px;
+	background-size: auto 100%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+.X .img{
+	background-image: url('./image/X.jpg');
+}
+.xs .img{
+	background-image: url('./image/xs.jpg');
+}
+.w .img{
+	background-image: url('./image/w.jpg');
+}
+@media only screen and (max-width:1072px){
+	.xr>h2,.X>h2,.xs>h2,.w>h2{
+		font-size:28px;
+	}
+	.xr>h3,.X>h3,.xs>h3,.w>h3{
+		font-size:21px;
+	}
+	.xr>div>div>a,.X>div>div>a,.xs>div>div>a,.w>div>div>a{
+		font-size:17px;
+	}
+}
+@media only screen and (max-width:735px){
+	.xr>h2,.X>h2,.xs>h2,.w>h2{
+		font-size:24px;
+	}
+	.xr>h3,.X>h3,.xs>h3,.w>h3{
+		font-size:17px;
+	}
+	.xr>div>div>a,.X>div>div>a,.xs>div>div>a,.w>div>div>a{
+		font-size:12px;
+	}
+	.X .img{
+		background-image: url('./image/X2.jpg');
+	}
+	.xs .img{
+		background-image: url('./image/xs2.jpg');
 	}
 }
